docs: edit title

--- a/notebooks/zinc20.ipynb
+++ b/notebooks/zinc20.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diverse Subset from ZINC20 (700M) Using a Similarity Threshold"
+    "# ZINC20 (700M) subset with similarity threshold"
    ]
   },
   {
