--- a/notebooks/zinc20.ipynb
+++ b/notebooks/zinc20.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import sys\n",
     "import warnings\n",
     "from concurrent.futures import ProcessPoolExecutor\n",
+    "from itertools import count\n",
     "from pathlib import Path\n",
     "\n",
     "import jax\n",
@@ -45,9 +46,8 @@
     "from torch.utils.data import DataLoader, Dataset\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from moll.core.distance import tanimoto\n",
-    "from moll.core.diversity import OnlineDiversityPicker\n",
-    "from itertools import count"
+    "from moll.metrics import one_minus_tanimoto\n",
+    "from moll.picking import OnlineDiversityPicker"
    ]
   },
   {
@@ -352,7 +352,7 @@
     "        try:\n",
     "            mol = Chem.MolFromSmiles(row.smiles)\n",
     "            fp = self.mol_to_fp(mol)\n",
-    "        except:\n",
+    "        except Exception:\n",
     "            print(f\"Ignoring SMILES: {row.smiles} {label}\")\n",
     "            fp = None\n",
     "        return fp, label\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -670,14 +670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "picker = OnlineDiversityPicker(\n",
     "    capacity=50_000,  # limit the number of picked molecules\n",
     "    k_neighbors=300,\n",
-    "    dist_fn=tanimoto,\n",
+    "    dist_fn=one_minus_tanimoto,\n",
     "    threshold=0.75,  # distance threshold\n",
     ")"
    ]
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
     "    # Iterate over batches of fingerprints and corresponding labels\n",
     "    for fps, labels in dataloader:\n",
     "        fps = jnp.array(fps, dtype=bool)\n",
-    "        n_accepted = picker.extend(fps, labels)\n",
+    "        n_accepted = picker.update(fps, labels)\n",
     "\n",
     "        # Update progress bars\n",
     "        pbar_lines.update(len(fps))  # some lines may be skipped due to errors\n",
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
