--- a/notebooks/diversity.ipynb
+++ b/notebooks/diversity.ipynb
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0da6e252c484d35addbd58f8031ed59",
+       "model_id": "fcb8605645e6424fb24242022cb345ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acdf35e68056406fb9a4dbea93303444",
+       "model_id": "3d32ac9482894820bf62359614d46b65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5e341eadc5841dab39a8e1f58009afb",
+       "model_id": "c19e479db9ba4278a61783308fa8dc94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -420,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff9cdde8a8e24cb094f0761b3a701e1f",
+       "model_id": "9c8d2e0f5de14a3abbe787a6dcbb4e75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,8 +439,8 @@
     "df = pd.DataFrame(columns=[\"p\", \"k_neighbors\", \"dist\"])\n",
     "\n",
     "# flatten\n",
-    "for (i, p), (j, k_neighbors) in tqdm(\n",
-    "    itertools.product(enumerate(p_list), enumerate(k_neighbors_list)),\n",
+    "for p, k_neighbors in tqdm(\n",
+    "    itertools.product(p_list, k_neighbors_list),\n",
     "    total=len(p_list) * len(k_neighbors_list),\n",
     "):\n",
     "    picker = OnlineDiversityPicker(\n",
