docs: update notebooks

--- a/notebooks/zinc20.ipynb
+++ b/notebooks/zinc20.ipynb
@@ -26,15 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gc\n",
     "import os\n",
-    "import sys\n",
     "import warnings\n",
     "from concurrent.futures import ProcessPoolExecutor\n",
-    "from itertools import count\n",
     "from pathlib import Path\n",
     "\n",
-    "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -42,12 +38,13 @@
     "import seaborn as sns\n",
     "from rdkit import RDLogger\n",
     "from rdkit.Chem import AllChem as Chem\n",
-    "from rdkit.Chem import Draw, rdFingerprintGenerator\n",
+    "from rdkit.Chem import rdFingerprintGenerator\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import one_minus_tanimoto\n",
-    "from moll.picking import OnlineDiversityPicker"
+    "from moll.picking import OnlineDiversityPicker\n",
+    "from moll.utils import group_files_by_size"
    ]
   },
   {
@@ -254,28 +251,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sort files by size, so in parallel execution all workers will have similar load"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SMILES_FILES = sorted(SMILES_FILES, key=lambda f: f.stat().st_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Calculate total number of molecules (first line may or may not be a header, some molecules may be invalid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,13 +265,13 @@
        "694449769"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N_LINES = sum(1 for f in SMILES_FILES for _ in open(f))\n",
+    "N_LINES = sum(1 for f in SMILES_FILES for _ in f.read_text().splitlines())\n",
     "N_LINES"
    ]
   },
@@ -310,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,6 +308,8 @@
     "        fp_fold: int,\n",
     "        n_workers: int = N_WORKERS,\n",
     "        drop_first_line: bool = True,\n",
+    "        shuffle: bool = True,\n",
+    "        seed: int = 42,\n",
     "    ):\n",
     "        self.smi_files = smi_files\n",
     "        self.n_workers = n_workers\n",
@@ -341,6 +324,8 @@
     "        self.fp_gen = None\n",
     "\n",
     "        # Data is stored in memory as a DataFrame\n",
+    "        self.shuffle = shuffle\n",
+    "        self.seed = seed\n",
     "        self.df = self.load_data()\n",
     "\n",
     "    def __len__(self):\n",
@@ -379,8 +364,10 @@
     "            names=[\"smiles\", \"id\"],\n",
     "            header=None,\n",
     "        )\n",
+    "\n",
     "        if self.drop_first_line:\n",
     "            df.drop(0, inplace=True)\n",
+    "\n",
     "        df[\"stem\"] = Path(smi_file).stem\n",
     "        df.reset_index(inplace=True, names=[\"line_no\"])\n",
     "        return df\n",
@@ -389,12 +376,16 @@
     "        with ProcessPoolExecutor(max_workers=self.n_workers) as executor:\n",
     "            gen = executor.map(self.load_smi_file, self.smi_files)\n",
     "            data = pd.concat(list(gen), ignore_index=True)\n",
+    "\n",
+    "        if self.shuffle:\n",
+    "            data = data.sample(frac=1, random_state=self.seed).reset_index(drop=True)\n",
+    "\n",
     "        return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,73 +403,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split files into chunks"
+    "## Group files into batches by size"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As file sizes vary, we will split them into **metabatches** 🫣"
+    "To prevent storing all data in memory, files will be grouped into **metabatches** 🫣 of nearly equal size, ensuring that each parallel job completes in approximately the same amount of time.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def file_batches(files: list, max_batches: int) -> list[list]:\n",
-    "    \"\"\"\n",
-    "    Split files into batches of roughly equal byte size. Number of batches may\n",
-    "    be less than `max_batches`.\n",
-    "    \"\"\"\n",
-    "    files = files[::-1]\n",
-    "    file_sizes = [f.stat().st_size for f in files]\n",
-    "    total_size = sum(file_sizes)\n",
-    "    batch_size = total_size // max_batches\n",
-    "\n",
-    "    batches = []\n",
-    "\n",
-    "    while files:\n",
-    "        batch = []\n",
-    "        batch_size_left = batch_size\n",
-    "        while files and batch_size_left > 0:\n",
-    "            f = files.pop()\n",
-    "            batch.append(f)\n",
-    "            batch_size_left -= f.stat().st_size\n",
-    "        batches.append(batch)\n",
-    "\n",
-    "    return batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SMILES_FILES_BATCHES = file_batches(SMILES_FILES, 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(map(len, SMILES_FILES_BATCHES)) == len(SMILES_FILES)"
+    "SMILES_FILES_METABATCHES = group_files_by_size(SMILES_FILES, 20)"
    ]
   },
   {
@@ -490,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +581,7 @@
        "17        2  2.661471"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +589,7 @@
    "source": [
     "batch_sizes_gb = [\n",
     "    (len(batch), sum(f.stat().st_size for f in batch) / 1024 / 1024 / 1024)\n",
-    "    for batch in SMILES_FILES_BATCHES\n",
+    "    for batch in SMILES_FILES_METABATCHES\n",
     "]\n",
     "\n",
     "pd.DataFrame(batch_sizes_gb, columns=[\"n_files\", \"size_GB\"])"
@@ -664,20 +610,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "picker = OnlineDiversityPicker(\n",
     "    capacity=50_000,  # limit the number of picked molecules\n",
     "    k_neighbors=300,\n",
-    "    dist_fn=one_minus_tanimoto,\n",
+    "    similarity_fn=one_minus_tanimoto,\n",
     "    threshold=0.75,  # distance threshold\n",
     ")"
    ]
@@ -691,51 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "939e5e1c21ed45779c10dff35739beba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Were accepted:   0%|          | 0/50000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "385853469b1a4c72b6899f4250a4fc4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Lines processed:   0%|          | 0/694449769 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5da92da416634722a8180ed229ae8bd8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SMILES batch:   0%|          | 0/18 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -749,12 +648,11 @@
     "%%time\n",
     "\n",
     "# Define progress bars\n",
-    "pbar_accepted = tqdm(total=picker.capacity, desc=\"Were accepted: \")\n",
-    "pbar_lines = tqdm(total=N_LINES, desc=\"Lines processed: \")\n",
-    "counter = count() # NOTE: next(counter) is not next(counter) 👀\n",
+    "progress_bar_lines = tqdm(total=N_LINES, desc=\"Lines processed: \")\n",
+    "progress_bar_accepted = tqdm(total=picker.capacity, desc=\"Were accepted: \")\n",
     "\n",
     "# Iterate over metabatches of SMILES files\n",
-    "for smi_files in tqdm(SMILES_FILES_BATCHES, desc=\"SMILES batch: \"):\n",
+    "for smi_files in tqdm(SMILES_FILES_METABATCHES, desc=\"SMILES batch: \"):\n",
     "    # For each metabatch, create a dataset\n",
     "    dataset = SmilesDataset(\n",
     "        smi_files,\n",
@@ -767,23 +665,21 @@
     "    dataloader = DataLoader(\n",
     "        dataset,\n",
     "        batch_size=BATCH_SIZE,\n",
-    "        num_workers=N_WORKERS // 4, # to prevent memory leaks\n",
+    "        num_workers=N_WORKERS,\n",
     "        collate_fn=collate_fn,\n",
     "    )\n",
     "\n",
     "    # Iterate over batches of fingerprints and corresponding labels\n",
     "    for fps, labels in dataloader:\n",
+    "        # Pass fingerprints to the picker\n",
     "        fps = jnp.array(fps, dtype=bool)\n",
     "        n_accepted = picker.update(fps, labels)\n",
     "\n",
     "        # Update progress bars\n",
-    "        pbar_lines.update(len(fps))  # some lines may be skipped due to errors\n",
-    "        pbar_accepted.update(n_accepted)  # accepted points may be overvritten later\n",
-    "        \n",
-    "        # Free memory, just in case\n",
-    "        if next(counter) % 100 == 0:\n",
-    "            jax.clear_caches() # clear JAX cache\n",
-    "            gc.collect()"
+    "        progress_bar_lines.update(len(fps))  # some lines may be skipped due to errors\n",
+    "        progress_bar_accepted.update(\n",
+    "            n_accepted\n",
+    "        )  # accepted points may be overwritten later"
    ]
   },
   {
