docs: update imports

--- a/notebooks/zinc20.ipynb
+++ b/notebooks/zinc20.ipynb
@@ -43,7 +43,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import one_minus_tanimoto\n",
-    "from moll.picking import OnlineDiversityPicker\n",
+    "from moll.pick import OnlineDiversityPicker\n",
     "from moll.utils import group_files_by_size"
    ]
   },
