--- a/notebooks/diversity.ipynb
+++ b/notebooks/diversity.ipynb
@@ -49,7 +49,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import euclidean, one_minus_tanimoto\n",
-    "from moll.picking import OnlineDiversityPicker\n",
+    "from moll.pick import OnlineDiversityPicker\n",
     "from moll.utils import dist_matrix"
    ]
   },
@@ -577,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
