chore: Rename OnlinePicker class to OnlineVectorPicker

--- a/notebooks/diversity.ipynb
+++ b/notebooks/diversity.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize how `OnlinePicker` works"
+    "# Visualize how `OnlineVectorPicker` works"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook provides visualizations for the `OnlinePicker` algorithm within Euclidean space, offering insights into the algorithm's operational mechanics. Subsequently, it employs generated fingerprints to demonstrate the algorithm's performance on a \"chemical\" space.\n",
+    "This notebook provides visualizations for the `OnlineVectorPicker` algorithm within Euclidean space, offering insights into the algorithm's operational mechanics. Subsequently, it employs generated fingerprints to demonstrate the algorithm's performance on a \"chemical\" space.\n",
     "\n",
     "The parameters of the algorithm are:\n",
     "\n",
@@ -49,7 +49,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import euclidean, one_minus_tanimoto\n",
-    "from moll.pick import OnlinePicker\n",
+    "from moll.pick import OnlineVectorPicker\n",
     "from moll.utils import dist_matrix"
    ]
   },
@@ -150,7 +150,7 @@
     "    total=len(capacity_list) * len(k_neighbors_list),\n",
     "):\n",
     "    k_neighbors = min(k_neighbors, capacity)\n",
-    "    picker = OnlinePicker(\n",
+    "    picker = OnlineVectorPicker(\n",
     "        capacity=capacity,\n",
     "        similarity_fn=euclidean,\n",
     "        k_neighbors=k_neighbors,\n",
@@ -231,7 +231,7 @@
     "):\n",
     "    k_neighbors = min(k_neighbors, capacity)\n",
     "\n",
-    "    picker = OnlinePicker(\n",
+    "    picker = OnlineVectorPicker(\n",
     "        capacity=50, similarity_fn=euclidean, k_neighbors=k_neighbors, p=p\n",
     "    )\n",
     "\n",
@@ -326,7 +326,7 @@
     "    itertools.product(enumerate(p_list), enumerate(k_neighbors_list)),\n",
     "    total=len(p_list) * len(k_neighbors_list),\n",
     "):\n",
-    "    picker = OnlinePicker(\n",
+    "    picker = OnlineVectorPicker(\n",
     "        capacity=50, similarity_fn=euclidean, k_neighbors=k_neighbors, p=p\n",
     "    )\n",
     "\n",
@@ -414,7 +414,7 @@
     "    itertools.product(p_list, k_neighbors_list),\n",
     "    total=len(p_list) * len(k_neighbors_list),\n",
     "):\n",
-    "    picker = OnlinePicker(\n",
+    "    picker = OnlineVectorPicker(\n",
     "        capacity=300,\n",
     "        similarity_fn=one_minus_tanimoto,\n",
     "        k_neighbors=k_neighbors,\n",
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`OnlinePicker` prefers points from the right side of the distance distribution. The quality of solutions for Tanimoto distance does not depend heavily on the parameter `p`:"
+    "`OnlineVectorPicker` prefers points from the right side of the distance distribution. The quality of solutions for Tanimoto distance does not depend heavily on the parameter `p`:"
    ]
   },
   {
