docs: rename .points to .vectors

--- a/notebooks/diversity.ipynb
+++ b/notebooks/diversity.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The parameters of the algorithm are:\n",
     "\n",
-    "- `n_points`: the quantity of points to be selected,\n",
+    "- `n_vectors`: the quantity of vectors to be selected,\n",
     "- `p`: the power of the repulsion term,\n",
     "- `k_neighbors`: the number of neighbors factored into the repulsion calculation"
    ]
@@ -24,11 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We construct a subset $P$ of `n_points` of a large set $M$ iteratively optimizing the following objective function:\n",
+    "We construct a subset $P$ of `n_vectors` of a large set $M$ iteratively optimizing the following objective function:\n",
     "\n",
-    "$$ \\mathcal{L} (P) = \\mathcal{L} (\\mathbf p_1, \\cdots, \\mathbf p_{n \\text{ points}}) = \\sum_{\\mathbf p, \\mathbf p' \\in P} \\dfrac{1}{|| \\mathbf p - \\mathbf p' ||^p} \\to \\min_{P \\subset M}. $$\n",
+    "$$ \\mathcal{L} (V) = \\mathcal{L} (\\mathbf v_1, \\cdots, \\mathbf v_n) = \\sum_{\\mathbf v, \\mathbf v' \\in V} \\dfrac{1}{|| \\mathbf v - \\mathbf v' ||^p} \\to \\min_{V \\subset M}. $$\n",
     "\n",
-    "The sum is approximated by a sum over the `k_neighbors` of each point $\\mathbf p \\in P$."
+    "The sum is approximated by a sum over the `k_neighbors` of each vector $\\mathbf v \\in V$."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fit picker for different values of `n_points` and `k_neighbors`:"
+    "Fit picker for different values of `n_vectors` and `k_neighbors`:"
    ]
   },
   {
@@ -160,16 +160,16 @@
     "    for batch in batches:\n",
     "        picker.update(batch)\n",
     "\n",
-    "    # Get the selected points\n",
-    "    x_sel, y_sel = picker.points.T\n",
+    "    # Get the selected vectors\n",
+    "    x_sel, y_sel = picker.vectors.T\n",
     "\n",
-    "    # Get the random batch points\n",
-    "    point, y = jax.random.choice(\n",
+    "    # Get the random batch vectors\n",
+    "    vector, y = jax.random.choice(\n",
     "        jax.random.PRNGKey(0), batches.reshape(-1, 2), (capacity, 2)\n",
     "    ).T\n",
     "\n",
-    "    # Plot the selected points\n",
-    "    axes[i, j].scatter(point, y, c=\"b\", marker=\".\", label=\"random\", alpha=0.1)\n",
+    "    # Plot the selected vectors\n",
+    "    axes[i, j].scatter(vector, y, c=\"b\", marker=\".\", label=\"random\", alpha=0.1)\n",
     "    axes[i, j].scatter(x_sel, y_sel, c=\"r\", marker=\".\", label=\"selected\")\n",
     "    axes[i, j].set_title(f\"capacity={capacity}\\nk_neighbors={k_neighbors}\", fontsize=9)\n",
     "    axes[i, j].set_aspect(\"equal\")\n",
@@ -239,16 +239,16 @@
     "    for batch in batches:\n",
     "        picker.update(batch)\n",
     "\n",
-    "    # Get the selected points\n",
-    "    x_sel, y_sel = picker.points.T\n",
+    "    # Get the selected vectors\n",
+    "    x_sel, y_sel = picker.vectors.T\n",
     "\n",
-    "    # Get the random batch points\n",
-    "    point, y = jax.random.choice(\n",
+    "    # Get the random batch vectors\n",
+    "    vector, y = jax.random.choice(\n",
     "        jax.random.PRNGKey(0), batches.reshape(-1, 2), (capacity, 2)\n",
     "    ).T\n",
     "\n",
-    "    # Plot the selected points\n",
-    "    axes[i, j].scatter(point, y, c=\"b\", marker=\".\", label=\"random\", alpha=0.1)\n",
+    "    # Plot the selected vectors\n",
+    "    axes[i, j].scatter(vector, y, c=\"b\", marker=\".\", label=\"random\", alpha=0.1)\n",
     "    axes[i, j].scatter(x_sel, y_sel, c=\"r\", marker=\".\", label=\"selected\")\n",
     "    axes[i, j].set_title(f\"k_neighbors={k_neighbors}\\np={p}\", fontsize=9)\n",
     "    axes[i, j].set_aspect(\"equal\")\n",
@@ -280,9 +280,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points, _ = make_blobs(n_samples=10_000, random_state=21, centers=3)\n",
+    "vectors, _ = make_blobs(n_samples=10_000, random_state=21, centers=3)\n",
     "np.random.seed(42)\n",
-    "np.random.shuffle(points)"
+    "np.random.shuffle(vectors)"
    ]
   },
   {
@@ -330,15 +330,15 @@
     "        capacity=50, similarity_fn=euclidean, k_neighbors=k_neighbors, p=p\n",
     "    )\n",
     "\n",
-    "    picker.update(points)\n",
+    "    picker.update(vectors)\n",
     "\n",
-    "    # Get the selected points\n",
-    "    x_sel, y_sel = picker.points.T\n",
+    "    # Get the selected vectors\n",
+    "    x_sel, y_sel = picker.vectors.T\n",
     "\n",
-    "    point, y = points.T\n",
+    "    vector, y = vectors.T\n",
     "\n",
-    "    # Plot the selected points\n",
-    "    axes[i, j].scatter(point, y, c=\"b\", marker=\".\", label=\"original\", alpha=0.1)\n",
+    "    # Plot the selected vectors\n",
+    "    axes[i, j].scatter(vector, y, c=\"b\", marker=\".\", label=\"original\", alpha=0.1)\n",
     "    axes[i, j].scatter(x_sel, y_sel, c=\"r\", marker=\".\", label=\"selected\")\n",
     "    axes[i, j].set_title(f\"k_neighbors={k_neighbors}\\np={p}\", fontsize=9)\n",
     "    axes[i, j].set_aspect(\"equal\")\n",
@@ -424,8 +424,8 @@
     "\n",
     "    picker.update(fingerprints)\n",
     "\n",
-    "    # Get the selected points\n",
-    "    picked = picker.points\n",
+    "    # Get the selected vectors\n",
+    "    picked = picker.vectors\n",
     "\n",
     "    # Compute distances\n",
     "    dists = dist_matrix(picked, one_minus_tanimoto, condensed=True)\n",
@@ -459,14 +459,14 @@
    "source": [
     "fp_dists = dist_matrix(\n",
     "    fingerprints[::100], one_minus_tanimoto, condensed=True\n",
-    ")  # take 1% as a random sample (points are random)"
+    ")  # take 1% as a random sample (vectors are random)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`OnlineVectorPicker` prefers points from the right side of the distance distribution. The quality of solutions for Tanimoto distance does not depend heavily on the parameter `p`:"
+    "`OnlineVectorPicker` prefers vectors from the right side of the distance distribution. The quality of solutions for Tanimoto distance does not depend heavily on the parameter `p`:"
    ]
   },
   {
