Rename OnlineDiversityPicker to OnlineVectorPicker (#19)

--- a/notebooks/zinc20.ipynb
+++ b/notebooks/zinc20.ipynb
@@ -31,9 +31,9 @@
     "tags": []
    },
    "source": [
-    "This example shows using `OnlineDiversityPicker` to choose a diverse set of molecules from ZINC20, based on a Tanimoto distance threshold of >= 0.75 between any two molecules. The subset's exact size isn't predetermined, only the maximum size (picker capacity) to manage resources.\n",
+    "This example shows using `OnlineVectorPicker` to choose a diverse set of molecules from ZINC20, based on a Tanimoto distance threshold of >= 0.75 between any two molecules. The subset's exact size isn't predetermined, only the maximum size (picker capacity) to manage resources.\n",
     "\n",
-    "The notebook covers handling large datasets unsuitable for in-memory loading. `OnlineDiversityPicker` operates online, scaling linearly with dataset size."
+    "The notebook covers handling large datasets unsuitable for in-memory loading. `OnlineVectorPicker` operates online, scaling linearly with dataset size."
    ]
   },
   {
@@ -64,7 +64,7 @@
     "import pandas as pd\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from moll.pick import OnlineDiversityPicker\n",
+    "from moll.pick import OnlineVectorPicker\n",
     "from moll.small import Molecule\n",
     "from moll.utils import (\n",
     "    iter_lines,\n",
@@ -354,7 +354,7 @@
    },
    "outputs": [],
    "source": [
-    "picker = OnlineDiversityPicker(\n",
+    "picker = OnlineVectorPicker(\n",
     "    capacity=50_000,  # limit the number of picked molecules\n",
     "    k_neighbors=300,\n",
     "    similarity_fn=\"one_minus_tanimoto\",\n",
@@ -838,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   },
   "papermill": {
    "default_parameters": {},
